# vcard-qr

./: Cargo.toml  README.md  data.csv
src/: main.rs
