[package]
name = "vcard"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.0"
image = "0.25.2"
imageproc = "0.25.0"
qrcode = "0.14.1"


[target.aarch64-apple-darwin]
rustflags = ["-C", "target-feature=+crt-static"]
